[package]
name = "zhang_hilbert"
version = "0.1.1"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/yvt/zhang_hilbert"
description = """
Produces an arbitrary-sized pseudo-Hilbert scan based on
“A Pseudo-Hilbert Scan for Arbitrarily-Sized Arrays” by Zhang, et al.
"""
keywords = ["hilbert", "curve", "algorithm"]

[dependencies]
num = { version = "0.2.0", default-features = false }
array = "0.0.1"

[dev-dependencies]
ndarray = "0.12.1"
clap = "2.26.0"
sdl2 = "0.32.1"
